# Solitaire

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: release.yml
assets/: icon.icns
include/: auto_move.h  card.h  console_card.h  drag_controller.h  game.h  game_state.h  hint.h  hit_result.h  move.h  pile.h  renderer.h
res/: Info.plist.in  solitaire.desktop  solitaire.rc
src/: card.cpp  drag_controller.cpp  game.cpp  main.cpp  pile.cpp  renderer.cpp
